tests/FAIL/semantics/manyfuncs.c
int a_glob;
int b;

int func1(void){
	int c;
	int b;
}

int func2(int a, int b){
	int var;
	int sac;

	var = 1;

	sabonete = 3;
}

int func3(int arg1, char arg2[]);

int func4(float arg1, int func3, char letra){
	printf("%f %d %c\n", arg1, func3, letra);
}

int main(void){
	func4(1.4, 3, 'a');
	return 0;
}
